--- a/serverless.yml
+++ b/serverless.yml
@@ -20,7 +20,7 @@ service: aws-nodejs # NOTE: update this with your service name
 provider:
   name: aws
   runtime: nodejs8.10
-    
+  environment: ${file(./env.yml)}  
 
 # you can overwrite defaults here
 #  stage: dev
@@ -62,7 +62,12 @@ functions:
       - http:
           path: hello/test
           method: get
-
+  test:
+    handler: test.hello
+    events: # All events associated with this function
+      - http:
+          path: test
+          method: get
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
