--- a/env.yml
+++ b/env.yml
@@ -1,3 +1,4 @@
-twillioApi : xyz
-spoitfyCID: spabc
-spotifyCSecret: secrret
+twillioApi: xyz
+spoitfyCID: b832f617ee3f4609be1d4a0152953448
+spotifyCSecret: ec2c2c21ff804a7e89c64396507d5b3f
+spotifyRedirect: localhost:8888/callback
