--- a/serverless.yml
+++ b/serverless.yml
@@ -21,6 +21,17 @@ provider:
   name: aws
   runtime: nodejs8.10
   environment: ${file(./env.yml)}
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:*
+        # - dynamodb:Query
+        # - dynamodb:Scan
+        # - dynamodb:GetItem
+        # - dynamodb:PutItem
+        # - dynamodb:UpdateItem
+        # - dynamodb:DeleteItem
+      Resource: "arn:aws:dynamodb:us-east-1:*:*"
 
 # you can overwrite defaults here
 #  stage: dev
