--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "request": "^2.88.0",
     "spotify-web-api-node": "^4.0.0",
     "twilio": "^3.23.2",
-    "util": "^0.11.1"
+    "util": "^0.11.1",
+    "uuid": "^3.3.2"
   }
 }
