insering the token

--- a/serverless.yml
+++ b/serverless.yml
@@ -92,6 +92,13 @@ functions:
       - http:
           path: smsreceived
           method: get
+
+  testFunc:
+    handler: saveToken.hello
+    events:
+      - http:
+          path: testFunc
+          method: get
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
