--- a/serverless.yml
+++ b/serverless.yml
@@ -74,6 +74,12 @@ functions:
       - http:
           path: smsreceived
           method: get
+  sms:
+    handler: receivehandler.sms
+    events:
+      - http:
+          path: sms
+          method: post
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
