--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/harshit-raj/BostonHacks2018#readme",
   "dependencies": {
     "aws-sdk": "^2.353.0",
+    "express": "^4.16.4",
     "spotify-web-api-node": "^4.0.0",
     "twilio": "^3.23.2"
   }
